--- a/test.html
+++ b/test.html
@@ -12,21 +12,26 @@
             background-color: red;
         }
 
-        .g-sd1 {
-            float: right;
-            width: 50px;
-            height: 100%;
-            background-color: cadetblue;
-        }
-
         .g-mn1 {
             float: left;
-            /*position: relative;*/
-            /*left: 200px;*/
+            width: 100px;
+            height: 100%;
+            background-color: blue;
+            margin-right: -100px;
+        }
+
+        .g-right-parent {
+            float: right;
             width: 100%;
             height: 100%;
-            margin-right: 200px;
-            background-color: blue;
+        }
+
+        .g-sd1 {
+            float: right;
+            margin-left: 200px;
+            width: 100%;
+            height: 100%;
+            background-color: cadetblue;
         }
 
     </style>
@@ -36,13 +41,13 @@
 
 <div class="g-home">
 
-
     <div class="g-mn1">
     </div>
 
-    <div class="g-sd1">
+    <div class="g-right-parent">
+        <div class="g-sd1">
+        </div>
     </div>
-
 </div>
 
 </body>
